# annotatingCSV

./: CMakeLists.txt  Doxyfile  LICENSE  LICENSE.txt  README.md
examples/: cell.nav  primary_key.nav  third_col.nav  whole_file.nav
scripts/: add_noise_to_datasets.py  run_programs.sh
src/: CMakeLists.txt  cli.cpp  cli.hpp  logger.cpp  logger.hpp  main_datalog.cpp  main_navigational.cpp
src/eval/: assignment_set.cpp  assignment_set.hpp  forward_matcher.cpp  forward_matcher.hpp  hash_table.cpp  hash_table.hpp  navigational_formula_eval.cpp  navigational_formula_eval.hpp  pattern_normal_form.cpp  pattern_normal_form.hpp  prefix_step.cpp  prefix_step.hpp  program_eval.cpp  program_eval.hpp  reverse_matcher.cpp  reverse_matcher.hpp  rule_eval.cpp  rule_eval.hpp  span.cpp  span.hpp  step1.cpp  step1.hpp  step2.cpp  step2.hpp  step3.cpp  step3.hpp  step4.cpp  step4.hpp  step4alt.cpp  step4alt.hpp  topological_sort.hpp
src/parser/: datalog_grammar.hpp  datalog_parser.cpp  datalog_parser.hpp  datalog_parser_types.cpp  datalog_parser_types.hpp  navigational_generator.cpp  navigational_generator.hpp  navigational_grammar.hpp  navigational_parser.cpp  navigational_parser.hpp  navigational_parser_types.cpp  navigational_parser_types.hpp  navigational_print_grammar.hpp
test/: CMakeLists.txt  catch_main.cpp
test/eval/: navigational_formula_eval.cpp  pattern_normal_form.cpp  reverse_matcher.cpp  rule_eval.cpp  step1.cpp  step2.cpp  step3.cpp  step4.cpp  step4alt.cpp  topological_sort.cpp
test/parser/: datalog_parser.cpp  navigational_parser.cpp
