CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)
PROJECT (navigational)

IF (NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE Debug CACHE STRING
       "Choose the type of build, options are: None Debug Release RelWithDebInfo
MinSizeRel." FORCE)
ENDIF ()

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET (MAINFOLDER ${PROJECT_SOURCE_DIR})

LIST (APPEND CMAKE_MODULE_PATH "${MAINFOLDER}/cmake")
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")

INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_BINARY_DIR}/src")
INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_BINARY_DIR}/test")
INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_BINARY_DIR}/thirdparty")

ADD_DEFINITIONS (-DBOOST_LOG_DYN_LINK)
FIND_PACKAGE (Boost 1.54 REQUIRED COMPONENTS system filesystem program_options
                                             log)

INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
LIST (APPEND project_LIBS ${Boost_LIBRARIES})

# Includes re2 in the project:
ADD_SUBDIRECTORY (thirdparty/re2)
INCLUDE_DIRECTORIES (${RE2_INCLUDE_DIR})
LIST (APPEND project_LIBS ${RE2_STATIC_LIBRARIES})

# Includes murmur3 in the project:
ADD_SUBDIRECTORY (thirdparty/murmur3)
INCLUDE_DIRECTORIES (${MURMUR3_INCLUDE_DIR})
LIST (APPEND project_LIBS ${MURMUR3_LIBRARIES})

# Includes Catch in the project:
ADD_SUBDIRECTORY (thirdparty/catch)
INCLUDE_DIRECTORIES (${CATCH_INCLUDE_DIR} ${COMMON_INCLUDES})
ENABLE_TESTING (true)  # Enables unit-testing.

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (test)

ADD_TEST (catch "${EXECUTABLE_OUTPUT_PATH}/run_tests")
