FILE (GLOB_RECURSE test_SRCS *.cpp *.hpp)

SET (test_BIN "run_tests")

INCLUDE_DIRECTORIES ("${MAINFOLDER}/src")
LIST (APPEND project_LIBS ${PROJECT_NAME})

ADD_EXECUTABLE (${test_BIN} ${test_SRCS})
TARGET_LINK_LIBRARIES (${test_BIN} ${project_LIBS})
SET_PROPERTY (TARGET ${test_BIN} PROPERTY CXX_STANDARD 14)
